--- a/warehouse/package.json
+++ b/warehouse/package.json
@@ -11,6 +11,9 @@
     "antd": "^5.25.3",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
